<resources>
    <string name="app_name">Ola Play Studios</string>

    <string name="btn_play_stop_desc">Play/Stop the song</string>
    <string name="btn_download_desc">Download the song</string>
    <string name="btn_favorite_desc">Add to playlist</string>
    <string name="cover_image_desc">This is a cover image of a song</string>

    <string name="nav_home">Home</string>
    <string name="nav_playlist">Playlist</string>
    <string name="nav_history">History</string>
    <string name="nav_portfolio">Portfolio</string>
    <string name="nav_other">Other</string>

    <string name="activity_portfolio">Portfolio</string>
    <string name="drawer_open">Open nav drawer</string>
    <string name="drawer_close">Close nave drawer</string>

    <string name="action_search">Search</string>
    <string name="search_hint">Search (by name)</string>

    <string name="about">About</string>

    <string name="jayesh" translatable="false">Jayesh Solanki</string>

    <string name="email_desc">Click to send email to Jayesh</string>
    <string name="linkedin">Connect with Jayesh Solanki on LinkedIn</string>
    <string name="twitter">Connect with Jayesh on twitter</string>
    <string name="stackoverflow">Helps others when his android build is still running.</string>
    <string name="github">Connect on Github</string>

    <string name="ola_play" translatable="false">Ola Play</string>

    <string name="error_no_songs">There are no songs to load</string>
    <string name="network_error">Something went wrong with the network</string>
    <string name="miserable_failure">This shouldn\'t happen. Please contact the developer</string>
    <string name="added_to_playlist">Added to Playlist</string>
</resources>
