<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtview_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="#DE000000"
            app:layout_constraintEnd_toStartOf="@+id/cover_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Tera woh pyar" />

        <TextView
            android:id="@+id/txtview_artists"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8A000000"
            app:layout_constraintEnd_toStartOf="@+id/cover_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtview_name"
            tools:text="Momina Mustehsan, Asim Azhar" />

        <ImageView
            android:id="@+id/cover_image"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:contentDescription="@string/cover_image_desc"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/cover_example" />

        <ImageButton
            android:id="@+id/btn_play_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_play_stop_desc"
            android:minWidth="0dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="#DE000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtview_artists"
            app:srcCompat="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/btn_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_download_desc"
            android:minWidth="0dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:textColor="#DE000000"
            app:layout_constraintStart_toEndOf="@+id/btn_play_stop"
            app:layout_constraintTop_toTopOf="@+id/btn_play_stop"
            app:srcCompat="@drawable/ic_file_download" />

        <ToggleButton
            android:id="@+id/btn_favorite"
            android:layout_width="33dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/like_toggle"
            android:checked="false"
            android:contentDescription="@string/btn_favorite_desc"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="@+id/cover_image"
            app:layout_constraintTop_toTopOf="@+id/cover_image" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>